<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/eventImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/event_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/btn_favorite"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/favorite_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="end|bottom"
                app:layout_constraintBottom_toBottomOf="@id/eventImage"
                app:layout_constraintEnd_toEndOf="@id/eventImage"
                android:src="@drawable/favorite_border" /> <!-- Initial icon -->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="16dp"
            android:text="@string/event_name" />

        <TextView
            android:id="@+id/eventOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:text="@string/event_owner" />

        <TextView
            android:id="@+id/eventQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:text="@string/event_quota" />

        <TextView
            android:id="@+id/eventTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:text="@string/event_time" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/event_description" />

        <Button
            android:id="@+id/openLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_register"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="32dp"/>
    </LinearLayout>
</ScrollView>
